# brain

./: .env.example  .env.gemini.example  .env.local.example  .env.openai.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  REVIEW.md  TODO.md  USER_MANUAL.md  alembic.ini  brain_model_registry.yaml  cfg.py  chatgpt-app-submission.json  docker-compose.yml  initial-plan.md  model-test.md  model_eval_test_plan_with_model_matrix.md  palate-migration.md  plan-2.0.md  planv3.0.md  pyproject.toml  slack-memory-agent-plan.md  update_brain_model_registry_prompt.md
.github/: AGENTS.md
artifacts/: deterministic_vs_llm_workflow_test_battery.md  embedding_model_ratings.md  eval_harness_repair_plan_updated.md  fine_grained_live_status.html  fine_grained_live_status.md  full_model_suite_latest  initial-plan.md  llm_promoted_workflow_test_battery.md  model-test.md  model_eval_phase_role_hierarchy.md  model_eval_retry3_workers10_latest.json  model_eval_retry3_workers10_plus_gpt55xhigh_latest.json  new_thinking_variants_missing_only_20260507_092700.json  post-fine-grained-tests-state-of-play.md  prod_retry3_workers10_plus_gpt55xhigh_20260507_042233_summary.html  role_flow_diagram.md  slack-memory-agent-plan.md
cfg/: AGENTS.md  common.yaml  dev.yaml  prod.yaml  qa.yaml  staging.yaml
cloudflare/: config.example.yml
config/: slack_memory_agent_rules.md
deployment/: AGENTS.md  docker-compose.prod.yml
docs/: AGENTS.md  AGENT_TOOL_GUIDE.md  API_SETUP_GUIDE.md  BACKUP_SCHEME.md  SLACK_SETUP.md  USER_GUIDE.md  brain_cognee_architecture_contract.md  brain_cognee_hard_cutover_plan.md  chatgpt-app-hardening.md  cognee-model-selection.md  current_brain_cognee_flow.html  index.html  openai-submission.md  production-secrets.md  proposed_brain_cognee_flow.html  proposed_brain_cognee_flow.md  role_flow_diagram.html  role_flow_diagram.md
eval/: queries.yaml  rubric.yaml
eval_reports/: core_missing_embeddings_20260507_053834.md  core_missing_gptoss_slack_20260507_054056.md  core_missing_judge_20260507_053601.md  core_missing_runtime_20260507_053016.md  google_lowconcurrency_20260506_172328.md  gpt55_xhigh_20260507_051853.md  gpt55_xhigh_eval_judge_20260507_051919.md  model_eval_20260506_170608.md  model_eval_20260506_170821.md  model_eval_retry3_workers10_20260506_175259.md  model_eval_retry3_workers10_plus_gpt55xhigh_20260507_042233.md  model_eval_retry3_workers10_plus_gpt55xhigh_20260507_042233.md.bak  (+3 more)
scripts/: AGENTS.md  (+42 more)
(+56524 files in other folders)
