[project]
name = "memory-stack"
version = "0.1.0"
description = "Cognee-native local memory evaluation harness for Brain."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "argon2-cffi",
  "certifi",
  "cognee[neo4j,docs]==1.1.0.dev0",
  "fastapi",
  "httpx",
  "mcp[cli]",
  "pandas",
  "pydantic",
  "pydantic-settings",
  "python-dotenv",
  "pyyaml",
  "rich",
  "alembic",
  "sqlalchemy",
  "psycopg[binary]",
  "tiktoken",
  "typer",
  "uvicorn[standard]",
  "asyncpg>=0.31.0",
  "pgvector>=0.4.2",
]

[project.optional-dependencies]
local = [
  "fastembed",
]
dev = [
  "pre-commit",
  "pytest",
  "ruff",
]

[project.scripts]
memory-stack-brain-eval = "memory_stack.evals.cli:app"
memory-stack-mcp-http = "memory_stack.mcp_server:main"
memory-stack-mcp-stdio = "memory_stack.mcp_stdio:main"
memory-stack-slack-agent = "memory_stack.slack_agent_server:main"
brain = "memory_stack.brain_cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_stack"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
